[package]
name = "fre-rs"
version = "0.3.0"
edition = "2024"

authors = ["Frashack <reeceyao@qq.com>"]
description = "Safe, ergonomic Rust abstraction over the AIR Native Extension (ANE) C API (`fre-sys`) for native-side development."
license = "MIT OR Apache-2.0"
readme = "README.md"

categories = ["api-bindings"]
keywords = ["fre", "ane", "air", "flash", "as3"]

homepage = "https://crates.io/crates/fre-rs"
documentation = "https://docs.rs/fre-rs"
repository = "https://github.com/frashack/fre-rs"

include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[package.metadata.docs.rs]
targets = [
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-msvc",
]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
fre-sys = "0.2"

